[package]
edition = "2021"
name    = "max30102"
version = "0.1.0"

[[bin]]
name = "MAX30102"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.16.0", features = [
  "defmt",
  "esp32c6",
  "exception-handler",
  "panic-handler",
] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32c6"] }
hayasen = { version = "0.0.8", path = "../..", features = ["max30102"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
